--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,50638],[],[[5,0,6,[7,8,9,10],[1,211,4183],[]],[11,0,12,[7,8,9,10],[1,4394,3661],[]],[13,0,14,[7,8,9,10],[1,8055,3604],[]],[15,0,16,[7,8,9,10],[1,11659,3910],[]],[17,0,18,[7,8,9,10],[1,15569,2885],[]],[19,0,20,[7,8,9,10],[1,18454,7539],[]],[21,0,22,[7,8,9,10],[1,25993,6513],[]],[23,0,24,[7,8,9,10],[1,32506,9065],[]],[25,0,26,[7,8,9,10],[1,41572,4487],[]],[27,0,28,[7,8,9,10],[1,46059,4579],[]]],[],[10,10,0,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,30468],[],[[5,0,6,[7,8,9,10],[0,194,15201,11],[]],[12,0,13,[7,8,14,10],[1,15395,15073],[]]],[],[2,1,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*HomeTest","*/Users/mufidnuha/development/robot-scripts/joumpa/Tests/HomeTest.robot","*Tests/HomeTest.robot","*<p>Testing joumpa\x3c/p>","*Verify navigation to &quot;Home&quot; page when access joumpa.com","*<p>TC-PUB-001\x3c/p>","*home","*ts-pub-001","*urd-pub-001","*web public","*Verify navigation to &quot;Home&quot; page from Joumpa logo in header","*<p>TC-PUB-002\x3c/p>","*Verify navigation to &quot;Home&quot; page from &quot;Home&quot; menu in header","*<p>TC-PUB-003\x3c/p>","*Verify navigation to &quot;Home&quot; page from &quot;About Joumpa&quot; in footer","*<p>TC-PUB-004\x3c/p>","*Verify 7 points of &quot;Why Joumpa&quot; section in Home page","*<p>TC-PUB-005\x3c/p>","*Verify navigation to &quot;Terms and Condition&quot; page from footer","*<p>TC-PUB-007\x3c/p>","*Verify navigation to &quot;Privacy Policy&quot; page from footer","*<p>TC-PUB-008\x3c/p>","*Verify navigation to https://gapura.id/about-us-uk from &quot;About Gapura&quot; in footer","*<p>TC-PUB-009\x3c/p>","*Verify navigation to https://play.google.com/store/apps/details?id=id.bigio.gapura.joumpa from Google Play Store logo","*<p>TC-PUB-010\x3c/p>","*Verify navigation to https://apps.apple.com/id/app/joumpa-for-customer/id1600399708?l=id from App Store logo","*<p>TC-PUB-011\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*ChangeLanguageTest","*/Users/mufidnuha/development/robot-scripts/joumpa/Tests/ChangeLanguageTest.robot","*Tests/ChangeLanguageTest.robot","*<p>Testing joumpa\x3c/p>","*TC-M05-001","*<p>Change language to Indonesian\x3c/p>","*change language","*m-pub-05","*ts-m05-011","*web public","*Page should have contained text 'Masuk' but did not.","*TC-M05-002","*<p>Change language to English\x3c/p>","*ts-m05-012"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:50","fail":0,"label":"All Tests","pass":10,"skip":0}],[{"elapsed":"00:00:50","fail":0,"label":"home","pass":10,"skip":0},{"elapsed":"00:00:50","fail":0,"label":"ts-pub-001","pass":10,"skip":0},{"elapsed":"00:00:50","fail":0,"label":"urd-pub-001","pass":10,"skip":0},{"elapsed":"00:00:50","fail":0,"label":"web public","pass":10,"skip":0}],[{"elapsed":"00:00:51","fail":0,"id":"s1","label":"HomeTest","name":"HomeTest","pass":10,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:30","fail":1,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:30","fail":1,"label":"change language","pass":1,"skip":0},{"elapsed":"00:00:30","fail":1,"label":"m-pub-05","pass":1,"skip":0},{"elapsed":"00:00:15","fail":1,"label":"ts-m05-011","pass":0,"skip":0},{"elapsed":"00:00:15","fail":0,"label":"ts-m05-012","pass":1,"skip":0},{"elapsed":"00:00:30","fail":1,"label":"web public","pass":1,"skip":0}],[{"elapsed":"00:00:30","fail":1,"id":"s1","label":"ChangeLanguageTest","name":"ChangeLanguageTest","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1706600401179;
+window.output["baseMillis"] = 1706602477197;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 50662;
+window.output["generated"] = 30509;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
